--- a/Index.html
+++ b/Index.html
@@ -104,8 +104,9 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
             <!-- Logo & Name -->
             <a href="#hero" class="flex items-center space-x-3">
-                <!-- LOGO UPDATED TO NEW FILE: 1000048427.jpg -->
-                <img src="/files/1000048427.jpg-7b16ea0e-2a0d-42f3-97ea-dcb216d57b7b" alt="ONS Coin Logo" class="h-10 w-10 rounded-full border-2 border-yellow-500 shadow-xl">
+                <!-- LOGO PATH: Using the simplified and safe name -->
+                <!-- The path must be the direct file name in the root: logo.jpg -->
+                <img src="./logo.jpg" alt="ONS Coin Logo" class="h-10 w-10 rounded-full border-2 border-yellow-500 shadow-xl">
                 <span class="text-xl font-extrabold ons-gradient-text">ONS | Om Namah Shivaya</span>
             </a>
 
@@ -124,8 +125,9 @@
         <!-- 1. Hero Section -->
         <section id="hero" class="py-16 md:py-32 text-center relative overflow-hidden">
             <div class="relative z-10">
-                <!-- LOGO UPDATED TO NEW FILE: logo.jpg -->
-                <img src="/files/logo.jpg-7b16ea0e-2a0d-42f3-97ea-dcb216d57b7b" alt="ONS Coin Logo" class="h-40 w-40 sm:h-52 sm:w-52 mx-auto rounded-full border-4 border-yellow-500 shadow-2xl shadow-yellow-500/50 mb-8">
+                <!-- LOGO PATH: Using the simplified and safe name -->
+                <!-- The path must be the direct file name in the root: logo.jpg -->
+                <img src="./logo.jpg" alt="ONS Coin Logo" class="h-40 w-40 sm:h-52 sm:w-52 mx-auto rounded-full border-4 border-yellow-500 shadow-2xl shadow-yellow-500/50 mb-8">
                 <h1 class="hero-text text-5xl sm:text-7xl font-extrabold mb-4">
                     <span class="ons-gradient-text">Om Namah Shivaya</span> ($ONS)
                 </h1>
